Fixed spacing in user index

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -109,6 +109,7 @@
    display: flex;
    flex-direction: column;
    align-items: center;
+   gap: 15px;
  }
 
  .user {
